fix ad alignment in toc

--- a/components/toc.less
+++ b/components/toc.less
@@ -19,7 +19,7 @@
   color: @wiki-light;
   display: block;
   text-align: center;
-  margin: 10px 0;
+  margin: 10px 0 10px -10px;
 }
 
 #sidebar-ad-2 {
